fix: PR suggested changes